deployments/k8s/base/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-grpc
spec:
  selector:
    app: helloworld-grpc
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
