deployments/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true"

  name: helloworld-ingress
  namespace: helloworld
spec:
  rules:
  - host: happy.k8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw-grpc-service
            port:
              number: 50051
  tls:
    - secretName: hw-happy-tls
      hosts:
        - happy.k8s.io
